--- a/src/main/resources/com/mutere/sufeeds/sufeedsproject/Post.fxml
+++ b/src/main/resources/com/mutere/sufeeds/sufeedsproject/Post.fxml
@@ -10,12 +10,18 @@
 <GridPane xmlns="http://javafx.com/javafx"
           xmlns:fx="http://javafx.com/fxml"
           fx:controller="com.mutere.sufeeds.sufeedsproject.Post" alignment="center" hgap="10" vgap="10" >
-    <padding><Insets top="25" right="25" bottom="25" left="25"/></padding>
+    <padding>
+        <Insets top="25" right="25" bottom="25" left="25"/>
+    </padding>
+
+    <Label text="Enter your admission number" GridPane.columnIndex="0" GridPane.rowIndex="0"
+           GridPane.columnSpan="2"/>
     <Label text="Enter a comment" GridPane.columnIndex="0" GridPane.rowIndex="0"
+           GridPane.columnSpan="2"/>
+    <Label text="Enter a topic" GridPane.columnIndex="0" GridPane.rowIndex="0"
            GridPane.columnSpan="2"/>
     <TextArea text="I learnt alot in the last lesson..." GridPane.columnIndex="1" GridPane.rowIndex="2"
               GridPane.columnSpan="2"/>
     <Button text="Post" GridPane.columnIndex="1" GridPane.rowIndex="3"
             GridPane.columnSpan="1" />
-
 </GridPane>
