--- a/src/main/resources/com/mutere/sufeeds/sufeedsproject/style.css
+++ b/src/main/resources/com/mutere/sufeeds/sufeedsproject/style.css
@@ -19,6 +19,7 @@
 .button{
     -fx-background-color: #5f5f61;
     -fx-text-fill: black;
+    -fx-pref-width: 200;
     -fx-font-size: 13;
     -fx-font-weight: bold;
     -fx-padding: 8;
@@ -26,6 +27,12 @@
     -fx-border-width: 2px;
     -fx-border-style: solid;
     -fx-background-radius: 0;
+}
+.button:hover{
+    -fx-background-color: -fx-shadow-highlight-color, -fx-outer-border, -fx-body-color;
+    -fx-background-insets: 0 0 -2 0, 0, 2, 4;
+    -fx-padding: 0.333333em 0.666667em 0.333333em 0.666667em; /* 4 8 4 8 */
+    -fx-text-fill: -fx-text-base-color;
 }
 
 .text-field{
