--- a/src/main/resources/com/mutere/sufeeds/sufeedsproject/style.css
+++ b/src/main/resources/com/mutere/sufeeds/sufeedsproject/style.css
@@ -1,6 +1,7 @@
 .root{
-    -fx-background-color: white;
-
+    -fx-border-color: black;
+    -fx-border-width: 10px;
+    -fx-border-style: solid;
 }
 
 .label{
@@ -11,11 +12,20 @@
 
 .hbox {
     -fx-background-color: #252626;
+    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);
+}
+
+.vbox{
+-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);
 
 
 }
 
 
+.label{
+    -fx-font-style: bold;
+    -fx-font-size: 20;
+}
 .button{
     -fx-background-color: #5f5f61;
     -fx-text-fill: black;
@@ -23,22 +33,20 @@
     -fx-font-size: 13;
     -fx-font-weight: bold;
     -fx-padding: 8;
-    -fx-border-color: black;
-    -fx-border-width: 2px;
-    -fx-border-style: solid;
-    -fx-background-radius: 0;
+    -fx-background-radius: 20;
 }
 .button:hover{
-    -fx-background-color: -fx-shadow-highlight-color, -fx-outer-border, -fx-body-color;
+    -fx-opacity: 0.7;
     -fx-background-insets: 0 0 -2 0, 0, 2, 4;
-    -fx-padding: 0.333333em 0.666667em 0.333333em 0.666667em; /* 4 8 4 8 */
+    /*-fx-padding: 0.333333em 0.666667em 0.333333em 0.666667em; /* 4 8 4 8 */
     -fx-text-fill: -fx-text-base-color;
 }
 
 .text-field{
-    -fx-padding: 15;
+    -fx-padding: 10;
     -fx-border-insets: 5px;
     -fx-background-insets: 5px;
+    -fx-background-radius:15;
 }
 
 
