--- a/src/main/resources/com/mutere/sufeeds/sufeedsproject/Home.fxml
+++ b/src/main/resources/com/mutere/sufeeds/sufeedsproject/Home.fxml
@@ -6,43 +6,37 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.text.Text?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.GridPane?>
-<?import org.kordamp.ikonli.javafx.FontIcon?>
-
-
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
-<VBox alignment="CENTER_LEFT" xmlns:fx="http://javafx.com/fxml"
+
+<HBox alignment="CENTER" xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.mutere.sufeeds.sufeedsproject.Home" style="-fx-background-color: white; -fx-border-color: black;
       -fx-border-width: 10px; -fx-border-style: solid;">
-    <HBox style="-fx-background-color: #5f5f61;" alignment="TOP_CENTER">
+    <HBox style="-fx-background-color: #5f5f61;" alignment="CENTER_RIGHT">
 
     </HBox>
-    <HBox alignment="CENTER_RIGHT">
-        <padding>
-            <Insets right="120.0" top="120.0" />
-        </padding>
-
-    </HBox>
-    <padding>
-        <Insets bottom="20.0" left="20.0" />
-    </padding>
-
 <VBox alignment="CENTER_LEFT" >
     <padding>
         <Insets bottom="20.0" left="120.0" />
     </padding>
-    <Label style="-fx-font-weight: bold;">Welcome to SU feeds</Label>
-    <Label>Sign in with your admission number</Label>
-    <Label>Make comments, feedback, jokes or summaries based on your topics</Label>
-    <HBox>
-    <Button onAction="#switchtoLogin" maxWidth="200">Sign up</Button>
-    <Button onAction="#switchtoBlog" maxWidth="200">Blog</Button>
+    <Label style="-fx-font-weight: bold; -fx-font-size: 30;">Welcome to SU feeds</Label>
+    <Label>By stratizens for stratizens.</Label>
+    <Label style="-fx-font-style: italic; -fx-text-fill: gray;" wrapText="true">Make comments, feedback, jokes or summaries based on your topics...</Label>
+    <HBox spacing="10">
+        <padding>
+            <Insets top="20.0"/>
+        </padding>
+    <Button onAction="#switchtoRegister" maxWidth="200" styleClass="button-for-home">Sign up</Button>
+    <Button onAction="#switchtoSignin" maxWidth="200" styleClass="button-for-home">Sign in</Button>
     </HBox>
 </VBox>
-</VBox>
+
+    <ImageView pickOnBounds="true" preserveRatio="true" fitWidth="700">
+        <image>
+            <Image url="@../sufeedsproject/logo.jpg"/>
+        </image>
+    </ImageView>
+</HBox>
 
 
 
