--- a/src/main/resources/com/mutere/sufeeds/sufeedsproject/Signin.fxml
+++ b/src/main/resources/com/mutere/sufeeds/sufeedsproject/Signin.fxml
@@ -9,23 +9,27 @@
         <?import javafx.scene.layout.HBox?>
         <?import javafx.scene.text.Text?>
 <?import javafx.scene.control.TextField?>
-<VBox alignment="CENTER"  spacing="20.0" xmlns:fx="http://javafx.com/fxml"
+<VBox alignment="CENTER" xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.mutere.sufeeds.sufeedsproject.Signin">
 <padding>
     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
 </padding>
-
-<VBox style="-fx-background-color: #e0e0e0;-fx-border-color: black; -fx-border-width: 2px; -fx-border-style: solid; -fx-text-fill: white;" maxWidth="300">
+    <Label style="-fx-font-size: 25;">Sign in</Label>
+<VBox spacing="5.0" style="-fx-background-radius: 20; -fx-border-radius: 20; -fx-background-color: #e0e0e0;-fx-border-color: #e0e0e0; -fx-border-width: 1px; -fx-border-style: solid; -fx-text-fill: white;" maxWidth="300">
     <padding>
-        <Insets bottom="20.0" left="20.0" top="20.0"/>
+        <Insets right="20.0" bottom="20.0" left="20.0" top="20.0"/>
     </padding>
-    <Label>Admission Number</Label>
-    <TextField fx:id="ad_no" maxWidth="200" ></TextField>
-    <Label>Password</Label>
-    <TextField fx:id="pass1" maxWidth="200" ></TextField>
-    <Label>Password confirmation</Label>
-    <TextField fx:id="pass2" maxWidth="200" ></TextField>
-    <Button onAction="#SigninButtonClick">Sign in</Button>
+    <Label style="-fx-font-size: 15;">Admission Number</Label>
+    <TextField fx:id="ad_no"></TextField>
+    <Label style="-fx-font-size: 15;">Password</Label>
+    <TextField fx:id="pass"></TextField>
+
+    <VBox alignment="CENTER">
+        <Button style="-fx-background-color: #e0e0e0" onAction="#switchtoRegister" maxWidth="300">Dont have an account? Sign up</Button>
+        <Button onAction="#SigninButtonClick" maxWidth="300">Sign in</Button>
+    </VBox>
+    <Button onAction="#Blog">Blog</Button>
+
 </VBox>
 </VBox>
 
