--- a/src/main/resources/com/mutere/sufeeds/sufeedsproject/Home.fxml
+++ b/src/main/resources/com/mutere/sufeeds/sufeedsproject/Home.fxml
@@ -3,12 +3,12 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
 
+<?import javafx.scene.text.Text?>
 <HBox alignment="CENTER" xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.mutere.sufeeds.sufeedsproject.Home" style="-fx-background-color: white; -fx-border-color: black;
       -fx-border-width: 10px; -fx-border-style: solid;">
@@ -22,23 +22,27 @@
     <Label style="-fx-font-weight: bold; -fx-font-size: 30;">Welcome to SU feeds</Label>
     <Label>By stratizens for stratizens.</Label>
     <Label style="-fx-font-style: italic; -fx-text-fill: gray;" wrapText="true">Make comments, feedback, jokes or summaries based on your topics...</Label>
+    <Text textAlignment="CENTER" style="-fx-font-size: 10;">Mtume Owino ©</Text>
     <HBox spacing="10">
         <padding>
             <Insets top="20.0"/>
         </padding>
     <Button onAction="#switchtoRegister" maxWidth="200" styleClass="button-for-home">Sign up</Button>
     <Button onAction="#switchtoSignin" maxWidth="200" styleClass="button-for-home">Sign in</Button>
-
-
     </HBox>
 </VBox>
 
     <ImageView pickOnBounds="true" preserveRatio="true" fitWidth="700">
         <image>
             <Image url="@../sufeedsproject/logo.jpg"/>
+
         </image>
     </ImageView>
+
 </HBox>
+
+
+
 
 
 
